--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "tie"
 version = "0.1.0"
-description = "Lightweight internationalization library for Python"
+description = "Lightweight internationalization library"
 authors = [{name = "Maksim Panov", email = "panovo@essent.space"}]
 license = { text = "MIT" }
 requires-python = ">=3.8"
-dependencies = ["pyyaml", "babel>=2.12.1", "packaging", "typing_extensions"]
+dependencies = ["pyyaml", "packaging", "typing_extensions"]
 
